# funpmp

./: .env.example  .gitignore  CLAUDE.md  README.md  demo.md  ev.py  funpmp.py  funpmp_simple.py  main.py  pyproject.toml  requirements.txt  spec.md  test_ev.py  worktime.py
.claude/commands/: speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md
.specify/scripts/powershell/: update-agent-context.ps1
